--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 
+2023-02-11  alexandrecvieira <somebody@someserver.com>
+
+	* Fixed problem of empty icon on panel
+
 2023-02-05  alexandrecvieira <somebody@someserver.com>
 
 	* Update
