--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 
 2023-02-11  alexandrecvieira <somebody@someserver.com>
 
+	* Fixed metadata version
 	* Fixed problem of empty icon on panel
 
 2023-02-05  alexandrecvieira <somebody@someserver.com>
