--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 
+2023-02-12  alexandrecvieira <somebody@someserver.com>
+
+	* Version 4: Fix line out blinking by removing line out label, fix osd width blinking
+
 2023-02-11  alexandrecvieira <somebody@someserver.com>
 
 	* Fix line out blinking
