--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 2023-02-12  alexandrecvieira <somebody@someserver.com>
 
 	* Version 4: Fix line out blinking by removing line out label, fix osd width blinking
+	* Version 4: Fix line out blinking by removing line out label, fix osd width blinking
 
 2023-02-11  alexandrecvieira <somebody@someserver.com>
 
