--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 
+2023-02-18  alexandrecvieira <somebody@someserver.com>
+
+	* Fixed: icon next to the volume slider
+
 2023-02-14  alexandrecvieira <somebody@someserver.com>
 
 	* Zip Update
