--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 
 2023-02-18  alexandrecvieira <somebody@someserver.com>
 
+	* Fix json data
 	* Fixed: icon next to the volume slider
 
 2023-02-14  alexandrecvieira <somebody@someserver.com>
